etc/tests/fuzz/errors/ownership/forget-while-borrowed.nshape
shape ownership-forget-while-borrowed {
  family "compiler-errors/ownership"
  generator "error"
  features ["error", "ownership", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "cannot forget owned slot 'a' while borrow 'b' is live"
  flags "--ownership-strict"
  source ny <<'NY'
use std.core

fn bad() int {
   def a = [1]
   def b = borrow(a)
   forget(a)
   len(b)
}

bad()
NY
}
